[project]
name = "Price-Is-Right"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # UI & Visualization
    "gradio==6.5.1",
    "plotly",
    
    # Core LLM Connectivity
    "openai==2.17.0",
    "litellm", 
    "python-dotenv",
    
    # Vector DB (Used by the Planner and Plot)
    "chromadb",
    
    # Scraping & Data
    "beautifulsoup4", 
    "feedparser", 
    "requests", 
    "pydantic==2.12.5",
    "datasets",
    "tqdm",
    "tzdata",
    
    # Machine Learning (Neural Network Agent)
    "torch", 
    "numpy", 
    "scikit-learn",
    
    # External Services
    "modal",
    "mailjet-rest",
    "google-cloud-storage",
]
